--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^5.0.45",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
