--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express-session": "^1.17.0",
     "@types/mongoose": "^5.5.34",
     "@types/multer": "^1.3.10",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.1",
