--- a/package.json
+++ b/package.json
@@ -1,52 +1,27 @@
 {
-  "name": "printing",
-  "version": "0.1.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.ts",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "ts-node ./src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "node"
+  ],
+  "author": "Jose Antonio Gutierrez Sagredo",
+  "license": "MIT",
   "dependencies": {
-    "@mdi/font": "^5.0.45",
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "stylus-loader": "^3.0.2",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.1.3"
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.17.0",
+    "@types/mongoose": "^5.5.34",
+    "@types/multer": "^1.3.10",
+    "connect-mongo": "^3.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "mongoose": "^5.8.1",
+    "mongoose-restapi-ui": "^1.8.0",
+    "multer": "^1.4.2"
   },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-router": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  "description": ""
 }
