--- a/nginx.conf
+++ b/nginx.conf
@@ -18,15 +18,16 @@ http {
         gzip_min_length 10240;
         gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
         gzip_disable "MSIE [1-6]\.";
+        
+        proxy_buffering on;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+        
+        client_max_body_size 1000m;
         # pass requests for dynamic content to rails/turbogears/zope, et al
         location / {
-            proxy_buffering on;
-            proxy_buffers 12 12k;
-            proxy_redirect off;
-
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
             proxy_pass   http://wordpress;
             
         }
