--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/express-fileupload": "^1.1.3",
     "@types/express-session": "^1.17.0",
     "@types/mongoose": "^5.5.34",
     "@types/multer": "^1.3.10",
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.1",
     "mongoose-restapi-ui": "^1.8.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "pdf-parse": "^1.1.1"
   },
   "description": ""
 }
