--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jose Antonio Gutierrez Sagredo",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^4.7.0",
     "@types/express": "^4.17.2",
     "@types/express-fileupload": "^1.1.3",
     "@types/express-session": "^1.17.0",
@@ -21,6 +22,9 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.1",
     "express-session": "^1.17.0",
+    "firebase-admin": "^8.10.0",
+    "google-auth-library": "^6.0.0",
+    "googleapis": "^48.0.0",
     "mongoose": "^5.8.1",
     "mongoose-restapi-ui": "^1.8.0",
     "multer": "^1.4.2",
