--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
-    "@types/express": "^4.17.2",
+    "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.6",
     "@types/express-fileupload": "^1.1.3",
     "@types/express-session": "^1.17.0",
-    "@types/mongoose": "^5.5.34",
+    "@types/mongoose": "^5.7.10",
     "@types/multer": "^1.3.10",
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.0",
     "firebase-admin": "^8.10.0",
     "google-auth-library": "^6.0.0",
     "googleapis": "^48.0.0",
-    "mongoose": "^5.8.1",
+    "mongoose": "^5.9.9",
     "mongoose-restapi-ui": "^1.8.0",
     "multer": "^1.4.2",
     "pdf-parse": "^1.1.1"
