--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
