--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express-session": "^1.17.0",
     "@types/mongoose": "^5.7.10",
     "@types/multer": "^1.3.10",
+    "@types/q": "^1.5.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
@@ -31,7 +32,8 @@
     "mongoose": "^5.9.9",
     "mongoose-restapi-ui": "^1.8.0",
     "multer": "^1.4.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "q": "^1.5.1"
   },
   "description": ""
 }
