--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.0",
     "firebase-admin": "^8.10.0",
     "google-auth-library": "^6.0.0",
     "googleapis": "^48.0.0",
+    "libreoffice-convert": "^1.0.5",
     "mongoose": "^5.9.9",
     "mongoose-restapi-ui": "^1.8.0",
     "multer": "^1.4.2",
+    "nodejs-pptx": "^1.0.1",
+    "nodemailer": "^6.4.6",
     "pdf-parse": "^1.1.1",
     "q": "^1.5.1"
   },
